--- a/views/login_fScreen.ejs
+++ b/views/login_fScreen.ejs
@@ -3,6 +3,6 @@
 <head></head>
 <body>
     <h1>로그인 실패</h1>
-    존재하지 않는 id이거나 passwd가 일치 하지 않습니다
+    존재하지 않는 id이거나 passwd가 일치 하지 않습니다 :(
 </body>
 </html>
