--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,10 @@
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!DOCTYPE html>
 <html>
 <head></head>
 <body>
     <h1>회원가입 페이지</h1>
-    <form action="./server/insertUser" method="POST">
+    <form action="/server/insertUser" method="post">
         id: <input type="text" name="id"><br>
         passwd: <input type="password" name="passwd">
         <button type="submit">등록</button>
