--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,19 @@
   <head>
     <title>LCsimulator</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <style>
+      div.mainPage{
+        text-align: center;
+        position: absolute;
+        top:50%;
+        left:50%;
+        border: solid 2px black;
+        width:600px;
+        height:270px;
+        margin-left: -300px;
+        margin-top: -135px;
+      }
+    </style>
     <script>
       // window.onlaod = function() {
       //   var register_btn = document.getElementById("Register");
@@ -14,18 +27,28 @@
     </script>
   </head>
   <body>
-    <h1>LCsimulator</h1>
-    <p>Welcome to LCsimulator</p>
-    <form action="/server/login" method="POST">
-      id: <input type="text" name="id"><br>
-      passwd: <input type="password" name="passwd">
-      <button type="submit">로그인</button>
-    </form>
+    <div class="mainPage">
+      <h1>LCsimulator</h1>
+      <h3>리그오브레전드 마법공학 상자 시뮬레이터</h3>
+      <form action="/server/login" method="POST">
+        <input type="text" name="id" placeholder="ID"><br>
+        <input type="password" name="passwd" placeholder="PW"><br>
+        <button type="submit">로그인</button>
+      </form>
 
-    <form action="/server/register" method="GET">
-      <button type="submit">회원가입</button>
-    </form>
-  
+      <form action="/server/register" method="GET">
+        계정이 없으세요?
+        <button type="submit">회원가입</button>
+      </form><br>
+      <div class="searchBar">
+        <form action="/server/searchPage" method="GET">
+          유저 기록 검색하러 가기
+          <button type="submit">검색 페이지 이동</button>
+        </form>
+      </div>
+    </div>
+
+    
 
   </body>
 </html>
