--- a/views/ChestResultWithBonus.ejs
+++ b/views/ChestResultWithBonus.ejs
@@ -15,14 +15,71 @@
 
         }
     </script>
+    <style>
+        body {
+            background-color: #011d2b;
+            color:azure;
+            font-weight: bold;
+        }
+        div.chestResult {
+            text-align: center;
+
+        }
+    </style>
 </head>
 <body>
-    상자 결과 화면<br>
-    <img src="/images/code/all/<%= bonusname %>.jpg" alt=""><br>
-    <%= bonusName %> (등급: <%= bonusLevel %>) 및<br>
-    <img src="/images/code/all/<%= name %>.jpg" alt=""><br>
-    <%= name %> (등급: <%= level %>) 획득!
-    <button id="goBack">다시 열어보기</button>
-    <button id="home">홈으로 가기</button>
+    <div class="chestResult">
+        <img src="/images/code/all/<%= bonusName %>.jpg" alt=""><br>
+        <img src="/images/code/all/<%= bonusLevel %>.jpg" alt="">
+            <p id="Bonuslevel">
+                <%= bonusLevel %>
+                <script>
+                    var resultLevel = document.getElementById('Bonuslevel');
+                    if(resultLevel.innerText == "일반") {
+                        console.log("green");
+                        resultLevel.style.color = 'green';
+                    }
+                    
+                    else if(resultLevel.innerText == "서사") {
+                        resultLevel.style.color = 'blue';
+                    }
+                    else if(resultLevel.innerText == "전설") {
+                        resultLevel.style.color = 'red';
+                    }
+    
+                    else {
+                        resultLevel.style.color = 'yellow';
+                    }
+                </script>
+            </p><br>
+            <%= bonusName %> 및<br>
+        <img src="/images/code/all/<%= name %>.jpg" alt=""><br>
+        <img src="/images/code/all/<%= level %>.jpg" alt="">
+            <p id="level">
+                <%= level %>
+                <script>
+                    var resultLevel = document.getElementById('level');
+                    if(resultLevel.innerText == "일반") {
+                        console.log("green");
+                        resultLevel.style.color = '#2ECC71';
+                    }
+                    
+                    else if(resultLevel.innerText == "서사") {
+                        resultLevel.style.color = '#85C1E9';
+                    }
+                    else if(resultLevel.innerText == "전설") {
+                        resultLevel.style.color = '#CB4335';
+                    }
+    
+                    else {
+                        resultLevel.style.color = '#F5B041';
+                    }
+                 </script>
+            </p><br>
+            
+        <%= name %> 획득!
+        <button id="goBack">다시 열기</button>
+        <button id="home">홈으로 가기</button>
+    </div>
 </body>
 </html>
