--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,48 +4,83 @@
     <title>LCsimulator</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <style>
+      body{
+        background-color:#010a13;
+      }
       div.mainPage{
+        background-color: white;
         text-align: center;
         position: absolute;
         top:50%;
         left:50%;
-        border: solid 2px black;
-        width:600px;
-        height:270px;
-        margin-left: -300px;
-        margin-top: -135px;
+        border-radius: 20px;
+        border: 0px;
+        width:500px;
+        height:300px;
+        margin-left: -250px;
+        margin-top: -100px;
+      }
+      input.Text {
+        background-color:lightgray;
+        border-radius: 10px;
+        border:  0px;
+        width: 200px;
+        height: 30px;
+      }
+
+      button.login {
+        background-color: white;
+        font-weight: bold;
+        color:darkgray;
+        border: 1;
+        border-color: gray;
+        border-radius: 5px;
+        width: 70px;
+        height: 25px;
+      }
+
+      button.register{
+        background-color: white;
+        color:darkgray;
+        border:0px;
+        width: 70px;
+        height: 25px;
+      }
+      button.search{
+        background-color: white;
+        color:darkgray;
+        border:0px;
+        width: 100px;
+        height: 25px;
+      }
+      div.logo{
+        height: 100px;
+        text-align: center;
       }
     </style>
-    <script>
-      // window.onlaod = function() {
-      //   var register_btn = document.getElementById("Register");
-      //   register_btn.onclick = function() {
-      //     location.href="/server/register";
-      //   };
-
-      // }
-    </script>
   </head>
   <body>
+    <div class="logo">
+      <img src="/images/code/all/LOLlogo.jpg" alt="" width="110" height="110">
+      <img src="/images/code/all/chestSimple.jpg" alt="" width="100" height="100">
+      <img src="/images/code/all/key.jpg" alt="" width="60" height="90">
+    </div>
     <div class="mainPage">
       <h1>LCsimulator</h1>
-      <h3>리그오브레전드 마법공학 상자 시뮬레이터</h3>
+      <br>
+      <br>
       <form action="/server/login" method="POST">
-        <input type="text" name="id" placeholder="ID"><br>
-        <input type="password" name="passwd" placeholder="PW"><br>
-        <button type="submit">로그인</button>
+        <input type="text" name="id" placeholder="ID" class="Text"><br><br>
+        <input type="password" name="passwd" placeholder="PW" class="Text"><br><br>
+        <button type="submit" class="login">로그인</button>
       </form>
-
-      <form action="/server/register" method="GET">
-        계정이 없으세요?
-        <button type="submit">회원가입</button>
-      </form><br>
-      <div class="searchBar">
-        <form action="/server/searchPage" method="GET">
-          유저 기록 검색하러 가기
-          <button type="submit">검색 페이지 이동</button>
-        </form>
-      </div>
+      <br><br>
+      <form style='display:inline' action="/server/register" method="GET">
+        <button type="submit" class="register">회원가입</button>
+      </form>&nbsp;&nbsp;
+      <form style='display:inline' action="/server/searchPage" method="GET">
+        <button type="submit" class="search">기록 검색 이동</button>
+      </form>
     </div>
 
     
