--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -1,13 +1,55 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!DOCTYPE html>
 <html>
+    <style>
+        body{
+            background-color:#011d2b;
+        }
+        div.search{
+            background-color: white;
+            text-align: center;
+            position: absolute;
+            top:50%;
+            left:50%;
+            border-radius: 10px;
+            border: 0px;
+            width:700px;
+            height:50px;
+            margin-left: -350px;
+            margin-top: -100px;
+        }
+        input.searchBox{
+            margin-top: 10px;
+            width: 500px;
+            height: 30px;
+            border: 2px;
+            border-color: darkgrey;
+        }
+        button.sub {
+            width:55px;
+            height: 25px;
+            border: 0px;
+            font-weight: 400;
+            color:darkgray;
+        }
+        div.logo{
+        position: relative;
+        top: 10px;
+        left: 20px;
+        color: white;
+        }
+    </style>
 <head>
 </head>
 <body>
-    <form action="/server/findUser" method="post">
-        찾으시고자 하는 User의 ID를 입력하세요
-        <input type="searchBox" type="text" name="searchWord">
-        <button type="submit">검색</button>
-    </form>
+    <div class="logo">
+        <h2>LC simulator</h2>
+    </div>
+    <div class="search">
+        <form action="/server/findUser" method="post">
+            <input type="searchBox" type="text" name="searchWord" class="searchBox" placeholder="검색할 User의 ID를 입력하세요">
+            <button type="submit" class="sub">검색</button>
+        </form>
+    </div>
 </body>
 </html>
