--- a/views/ChestResult.ejs
+++ b/views/ChestResult.ejs
@@ -4,7 +4,7 @@
 <head>
     <style>
         body {
-            background-color: #011d2b;
+            background-color: #070B19;
             color:azure;
             font-weight: bold;
         }
@@ -15,6 +15,13 @@
         .box {
             position: relative;
             top: 60px;
+        }
+        button {
+            border-color: darkgoldenrod;
+            background-color: #070B19;
+            color:gold;
+            font-weight: bold;
+            font-size: 20px;
         }
     </style>
     <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> 
