--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,8 +63,18 @@
     <div class="logo">
       <img src="/images/code/all/LOLlogo.jpg" alt="" width="110" height="110">
       <img src="/images/code/all/chestSimple.jpg" alt="" width="100" height="100">
-      <img src="/images/code/all/key.jpg" alt="" width="60" height="90">
+      <img src="/images/code/all/key.jpg" alt="" width="65" height="90">
     </div>
+    <img style="position:absolute; top:20%; left:80%;"src="/images/code/all/까르륵.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:30%; left:20%;"src="/images/code/all/알았다.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:50%; left:70%;"src="/images/code/all/장난해.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:70%; left:88%;"src="/images/code/all/두두 감정표현.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:9%; left:10%;"src="/images/code/all/이해 불가.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:63%; left:6%;"src="/images/code/all/너무해.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:88%; left:65%;"src="/images/code/all/나이스 샷!.jpg" alt="" width="80" height="80">
+    <img style="position:absolute; top:80%; left:25%;"src="/images/code/all/견뎌라.jpg" alt="" width="80" height="80">
+
+
     <div class="mainPage">
       <h1>LCsimulator</h1>
       <br>
@@ -79,7 +89,10 @@
         <button type="submit" class="register">회원가입</button>
       </form>&nbsp;&nbsp;
       <form style='display:inline' action="/server/searchPage" method="GET">
-        <button type="submit" class="search">기록 검색 이동</button>
+        <button type="submit" class="search">&nbsp;&nbsp;&nbsp;기록 검색</button>
+      </form>
+      <form style='display:inline' action="/server/itemPage" method="GET">
+        <button type="submit" class="search">&nbsp;&nbsp;&nbsp;품목 열람</button>
       </form>
     </div>
 
