--- a/views/login_fScreen.ejs
+++ b/views/login_fScreen.ejs
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <style>
+        body{
+            background-color:#010a13;
+            color: white;
+        }
+    </style>
+</head>
 <body>
     <h1>로그인 실패</h1>
     존재하지 않는 id이거나 passwd가 일치 하지 않습니다 :(
