--- a/views/searchPage.ejs
+++ b/views/searchPage.ejs
@@ -39,10 +39,15 @@
         color: white;
         }
     </style>
+    <script>
+        function goHome() {
+            window.location = "/";
+        }
+    </script>
 <head>
 </head>
 <body>
-    <div class="logo">
+    <div class="logo" onclick="goHome()">
         <h2>LC simulator</h2>
     </div>
     <div class="search">
