--- a/views/register.ejs
+++ b/views/register.ejs
@@ -43,9 +43,14 @@
         height: 25px;
       }
     </style>
+    <script>
+      function goHome() {
+          window.location = "/";
+      }
+    </script>
 </head>
 <body>
-  <div class="logo">
+  <div class="logo" onclick="goHome()">
     <h2>LC simulator</h2>
   </div>
     <div class="mainPage">
